opam-version: "1.2"
name: "bitcoinml"
version: "0.4.1"
maintainer: "Davide Gessa <gessadavide@gmail.com>"
authors: [
  "Davide Gessa <gessadavide@gmail.com>"
]

homepage: "https://github.com/dakk/bitcoinml"
bug-reports: "https://github.com/dakk/bitcoinml/issues"
license: "MIT"
dev-repo: "https://github.com/dakk/bitcoinml.git"
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
build-test: [
  ["dune" "build" "-p" name "-j" jobs "@runtest" "@doc"]
]
build-doc: [
  ["dune" "build" "-p" name "-j" jobs "@doc"]
]

depends: [
  "dune" {build & >= "1.7.3"}
  "bitstring" {>= "3.1.0"}
  "stdint" {>= "0.5.1"}
  "bignum" {>= "v0.12.0"}
  "sexplib" {>= "v0.12.0"}
  "cryptokit" {>= "1.13"}
  
  "hex" {test & >= "1.3.0"}
  "ounit" {test & >= "2.0.8"}
  "odoc" {test & >= "1.3.0"}
]

depexts: [
]

