opam-version: "2.0"
name: "bitcoinml"
version: "0.4.2"
synopsis: "Bitcoin data-structures library for OCaml"
description: """
Bitcoin data-structures library for OCaml. Modules documentation is 
available at https://dakk.github.io/bitcoinml/
"""
maintainer: "Davide Gessa <gessadavide@gmail.com>"
authors: [
  "Davide Gessa <gessadavide@gmail.com>"
]

homepage: "https://github.com/dakk/bitcoinml"
bug-reports: "https://github.com/dakk/bitcoinml/issues"
license: "MIT"
dev-repo: "git+https://github.com/dakk/bitcoinml.git"
build: ["dune" "build" "-p" name "-j" jobs]

depends: [
  "ocaml" {>= "4.05.0"}
  
  "dune" {build & >= "1.6.0"}
  "bitstring" {>= "3.1.0"}
  "stdint" {>= "0.5.1"}
  "cryptokit" {>= "1.13"}
  "bignum" {>= "v0.10.0"}
  "hex" {>= "1.3.0"}

  "ounit" {with-test & >= "2.0.8"}
  "odoc" {with-test & >= "1.3.0"}
]

depexts: [
]

